--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: "D.I.V.I.D.E. Wiki"
+title: "D.I.V.I.D.E."
 description: "An archive of mysterious events, lore, and glitches from the D.I.V.I.D.E. universe."
 theme: jekyll-theme-slate
